--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vue-session": "^1.0.0",
-    "vuetify": "^1.5.5"
+    "vuetify": "^1.5.5",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
